--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -250,7 +250,9 @@
 				<ul class="basket__list"></ul>
 				<div class="modal__actions">
 					<button class="button basket__button">Оформить</button>
-					<span class="basket__price">0 синапсов</span>
+					<span class="basket__price">
+						<span class="basket__price-num">0</span> синапсов
+					</span>
 				</div>
 			</div>
 		</template>
